# futsalAnalytics

./: # LATEST.py  # from youtube.py  .gitignore  CALIBRATION_FIXES.md  MANUAL.md  README.md  README_CALIBRATION.md  README_STATUS.py  SAMPLE_VIDEOS.md  STATUS.txt  TECHNICAL_REPORT.md  calibracion_simple.py  claude.md  futsal_analyzer.py  futsal_analyzer_v2.py  futsal_data_template.yaml  pyproject.toml  test_calibrador_libre.py  test_calibration.py  test_calibration_improved.py  test_calibration_light.py  test_field_simple.py  test_full_flow.py  test_import.py  test_integracion_full.py  test_with_url.py
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: ANNOTATION_GUIDE.md  CALIBRATION.md  CHANGELOG.md  Resum Empresarial del TFG.docx  SAMPLE_VIDEOS.md  Sprints.docx  TFG_Breaking_the_Data_Deadlock.docx  TRAINING.md  YOUTUBE_WORKFLOW.md  v1.docx
futsal_dataset/: README.roboflow.txt  data.yaml  futsal_dataset.yaml
futsal_dataset/train/: labels.cache
futsal_dataset/train/labels/: frame_00001_jpg.rf.T125FAhhW0uya2pYJ5sE.txt  frame_00002_jpg.rf.M1IA9Yv7AysL1f1dtgCG.txt  frame_00003_jpg.rf.FtPVGikpOQK6Guaw1jVN.txt  frame_00004_jpg.rf.VfL1vTmgqDihLdp1Ixd5.txt  frame_00005_jpg.rf.4Gd4LYxMoXmqRcCCSIfn.txt  frame_00006_jpg.rf.q400rIEODux6VWANF6Jc.txt  frame_00007_jpg.rf.FNH4iyiQ6yEh2IhTCsk2.txt  frame_00008_jpg.rf.PZBPkIqC6A3WHr8BwNz8.txt  frame_00009_jpg.rf.CmZHSx1zZ1o1CpOh2lEy.txt  frame_00010_jpg.rf.dIVrf1h4omNwnRrVFlpY.txt  frame_00011_jpg.rf.tD5gIxsI9AQ13wYWZc3F.txt  frame_00012_jpg.rf.TzuhYd9qgygp0TsUJn9b.txt  frame_00013_jpg.rf.yd3gqa2xl0o3BNKeO60p.txt  frame_00014_jpg.rf.YwqwWkZu86gCzFfA1zKE.txt  frame_00015_jpg.rf.zpt6lfilgz31lPLVd9W1.txt  frame_00016_jpg.rf.we8BWTejUPkKseLcyPVT.txt  frame_00017_jpg.rf.bjBTh24C7t8bP2AZEhKW.txt  frame_00018_jpg.rf.syrAhoFjHw2Mpjxiu78k.txt  frame_00019_jpg.rf.vQzmpATUWQV0DojVSPKf.txt  frame_00020_jpg.rf.Z6CZAUIi1Nw82taSIweB.txt  frame_00021_jpg.rf.NI3hB24xCWnL6ksdua5f.txt  frame_00022_jpg.rf.dBSLMmptvL49LRbmWZR4.txt  frame_00023_jpg.rf.XrJ3zemh8HhJYcowf7Vc.txt  frame_00024_jpg.rf.CLzW77WIwjtMtSa7PI1v.txt  frame_00025_jpg.rf.2WUN6tHcVtiRmn9g37Vz.txt  frame_00026_jpg.rf.VVNxdaF8BER2Jlb0DG94.txt  frame_00027_jpg.rf.XMLb64hUiTpakbbvbOpM.txt  frame_00028_jpg.rf.FLGLLQpdkhKtiBbqBEru.txt  frame_00029_jpg.rf.XVwOY6eRlSEJDZGW321C.txt  frame_00030_jpg.rf.G0kNfNhMxJPoVODiLQCv.txt  frame_00031_jpg.rf.0mmFWCfiRUSJTAdDs39y.txt  frame_00032_jpg.rf.tkZmHT3TaBfrEflIDf4d.txt  frame_00033_jpg.rf.7e2Y1p8fY9sGQLzUPfTS.txt  frame_00034_jpg.rf.FRHBnfRjHJAbnZAo5Pi3.txt  (+314 more)
out_smoke/: positions.jsonl
scripts/: calibrate.py  extract_frames.py  extract_frames_opencv.py  split_dataset.py  train.py
src/futsal_analytics/: __init__.py  __main__.py  board.py  calibration.py  config.py  detection.py  field.py  kpis.py  stream.py
tests/: conftest.py  test_calibration.py  test_cli.py  test_detection.py  test_field.py  test_kpis.py  test_runtime_helpers.py  test_stream.py  test_web_shared.py
web/: README.md  _shared.py  app.py
web/pages/: 1_Analyse.py  2_Viewer.py  3_Roster.py
(+7 files in other folders)
