[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futsal-analytics"
version = "0.1.0"
description = "Real-time futsal match analysis from YouTube streams using YOLO and OpenCV"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Isaac Boque", email = "isboque19@gmail.com" }]
dependencies = [
    "opencv-python",
    "ultralytics",
    "supervision",
    "scikit-learn",
    "yt-dlp",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
futsal-analytics = "futsal_analytics.__main__:main"
futsal-calibrate  = "futsal_analytics.calibration:run_standalone"

[tool.setuptools.packages.find]
where = ["src"]
